--- a/native/android/build.gradle
+++ b/native/android/build.gradle
@@ -22,8 +22,10 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.xelven:SqlParser-Android:1.0'
 }
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
